# bemani-firm-rs

./: Cargo.toml  rust-toolchain.toml
src/: button.rs  encoder.rs  main.rs  rgb.rs  usb.rs
