[package]
name = "bemani-firm-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
embassy-executor = { version = "0.7.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-rp = { version = "0.6.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp2040"] }
embassy-time = { version = "0.4.0", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-futures = { version = "0.1.0" }

defmt = "1.0.1"
defmt-rtt = "1.0.0"
fixed = "1.23.1"
fixed-macro = "1.2"

cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
critical-section = "1.1"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }

embassy-usb = { version = "0.5.0", features = ["defmt"] }
# usbd-hid = { git = "https://github.com/LegitCamper/usbd-hid", rev = "174680b1c2225388df72784f1c137a70ab9ab557" }
usbd-hid = { version = "0.8.1" }

[profile.release]
# Enable generation of debug symbols even on release builds
debug = true
